--- a/fj/fitness_jerk/static/css/styles.css
+++ b/fj/fitness_jerk/static/css/styles.css
@@ -594,6 +594,11 @@ input[type="email"]::placeholder {
     align-items: center;
 }
 
+div.google-login-btn button{
+    width: fit-content;
+}
+
+
 button {
     font-size: 16px;
     width: 50%;
@@ -685,7 +690,7 @@ form.settings_form {
 
 .user_details {
     padding: 10px;
-    margin-top: 5px;
+    padding-bottom: 0px;
 }
 
 .profile_settings a {
@@ -702,11 +707,22 @@ form.settings_form {
     text-align: center;
 }
 
+
 .profile_img {
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin-top: 5px;
     
+}
+
+.noimage {
+    display: flex;
+}
+
+.noimage_check {
+    margin-left: 5px;
+    margin-top: 2px;
 }
 
 .custom-dropdown {
@@ -716,6 +732,7 @@ form.settings_form {
     align-items: center;
     justify-content: flex-start;
     z-index: 10;
+    margin-top: 5px;
 }
 
 .dropdown-checkbox {
@@ -724,18 +741,20 @@ form.settings_form {
 
 .profile_pic_settings {
     padding: 10px;
+    padding-top: 5px;
 }
 
 .dropdown-label {
     padding: 5px; 
-    border: 1px solid black;
-    background-color:  whitesmoke;
+    border: 1px solid #7a7a7a;
+    background-color:  rgb(237 237 237);
     cursor: pointer;
     width: fit-content;
     margin-left: 5px;
     color: black;
     font-size: 13px;
     overflow: visible;
+    border-radius: 3px;
 }
 
 .dropdown-checkbox:checked + .dropdown-label + .dropdown-selected-avatar + .dropdown-options,
@@ -827,9 +846,8 @@ label[for="id_image"] {
 
 .errorlist {
     color: whitesmoke;
-    margin: 5px;
     list-style-type: none;
-    background-color: #fa03034f;
+    background-color: red;
     width:fit-content;
     padding: 2px;
 }
