--- a/fj/fitness_jerk/templates/fitness_jerk/settings.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/settings.html
@@ -29,11 +29,14 @@
                 <p style="text-align: center;">Profile picture</p><br>
                 <hr>
                 <br>
+                <div class="noimage">
+                    <label for="noimage">No picture:</label>
+                    <input type="checkbox" name="noimage" value="noimage" class="noimage_check">
+                </div>
                 <div class="profile_img">
-                    <label for="profile_img">Upload image:</label> 
+                    <label for="profile_img">Upload picture:</label> 
                     {{ profile_pic.as_p }}
                 </div>
-                <p>or</p>
                 <div class="custom-dropdown">
                     <label for="avatar-dropdown">Choose avatar:</label>
                     <input type="checkbox" id="avatar-dropdown" class="dropdown-checkbox">
