--- a/fj/templates/socialaccount/login.html
+++ b/fj/templates/socialaccount/login.html
@@ -17,13 +17,14 @@
       <h2>REACH YOUR<br>GOALS</h2>
     </div>
     <div class="google-login-btn">
-        {% element form method="post" no_visible_fields=True %}
-            {% slot actions %}
-                {% csrf_token %}
-                {% element button type="submit" class="login-btn"%}
-                    {% trans "Continue" %}
-                {% endelement %}
-            {% endslot %}
-        {% endelement %}
+            {% element form method="post" no_visible_fields=True %}
+                {% slot actions %}
+                    {% csrf_token %}
+                    <p style="color: whitesmoke;">Please click
+                    {% element button type="submit" class="login-btn"%}
+                        {% trans "here" %} 
+                    {% endelement %} to continue login with Google accounts </p>
+                {% endslot %}
+            {% endelement %} 
     </div>
 {% endblock %}
