--- a/fj/fitness_jerk/templates/fitness_jerk/exercise_muscles.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/exercise_muscles.html
@@ -1,6 +1,8 @@
 {% extends 'fitness_jerk/base.html' %}
 {% load static %}
-{% block title %}Training Build it Up!{% endblock %}
+
+{% block title %}Training Build it all!{% endblock %}
+
 {% block content %}
 <link rel="stylesheet" href="{% static 'css/timer_css.css' %}">
 <div class="exercise-container">
@@ -11,20 +13,19 @@
         {% for exercise in exercises %}
         <li class="exercise-item" data-duration="{{ exercise.duration }}" data-name="{{ exercise.name }}"
             style="display: none;">
-            <span class="exercise-name">{{ exercise.name }}</span>
-            <iframe class='video_url' width="400" height="240"
+            <iframe class='video_url' width="500" height="340"
                 src="{{ exercise.video_url }}?start={{ exercise.start_time }}&end={{ exercise.end_time }}"
                 frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen>
-            </iframe>
+            </iframe><br>
+            <span class="exercise-name">{{ exercise.name }}</span>
         </li>
         {% endfor %}
         {% endif %}
     </ul>
 
     <div id="message">
-
-        <p>Start</p>
+        <p>TIMER:</p>
     </div>
 
     <div id="timer">
@@ -33,8 +34,7 @@
 
     <div class="button-layout">
         <button id="start-btn" data-play-icon="{% static 'play.svg' %}" data-pause-icon="{% static 'pause.svg' %}">
-
-            <img src="{% static 'play.svg' %}" alt="Play">
+            <img src="{% static 'play.svg' %}" alt="PlayPause" fill="red">
         </button>
         <button id="finish-btn">
             <a href="{% url 'finish' %}">Done!</a>
@@ -43,7 +43,7 @@
             <a href="{% url 'profile' %}">Give up!</a>
         </button>
     </div>
+
     <script src="{% static 'timer_js.js' %}"></script>
-    <script src="{% static 'navbar_js.js' %}"></script>
 </div>
 {% endblock %}
