--- a/fj/fitness_jerk/templates/registration/signup.html
+++ b/fj/fitness_jerk/templates/registration/signup.html
@@ -31,7 +31,7 @@
                 <div class="alert alert-danger">
                     <ul>                         
                         {% for error in form.non_field_errors %}
-                        <li>{{ error }}</li>
+                        <li>{{ error.message }}</li>
                         {% endfor %}
                     </ul>
                 </div>
