--- a/fj/fitness_jerk/templates/registration/signup.html
+++ b/fj/fitness_jerk/templates/registration/signup.html
@@ -27,15 +27,20 @@
                 <div class="form-group">
                     <input type="password" name="password2" placeholder="Confirm Password">
                 </div>
-                {% if form.errors %}
-                <div class="alert alert-danger">
-                    <ul>                         
-                        {% for error in form.non_field_errors %}
-                        <li>{{ error.message }}</li>
+                    {% if form.errors %}
+                        {% for field in form %}
+                            {% for error in field.errors %}
+                                <div class="alert alert-danger">
+                                    <strong>{{ error|escape }}</strong>
+                                </div>
+                            {% endfor %}
                         {% endfor %}
-                    </ul>
-                </div>
-                {% endif %}
+                        {% for error in form.non_field_errors %}
+                        <div class="alert alert-danger">
+                            <strong>{{ error|escape }}</strong>
+                        </div>
+                        {% endfor %}
+                    {% endif %}
                 <div class="links">
                     <div class="login-btn">
                         <button type="submit" value="Sign up">Sign up</button>
